--- a/src/Customer/styles/Cart.css
+++ b/src/Customer/styles/Cart.css
@@ -61,6 +61,9 @@ body {
 	flex: 2;
 	display: flex;
 	gap: 30px;
+	white-space: nowrap;
+	/* overflow: hidden;
+    text-overflow: ellipsis; */
 }
 
 .product {
@@ -73,7 +76,7 @@ body {
 	transition: transform 0.2s ease-in-out;
 	cursor: pointer;
 	overflow: hidden;
-	position: relative;
+	position: relative; 
 }
 
 .product:hover {
